--- a/style.css
+++ b/style.css
@@ -1,39 +1,34 @@
 @import url("https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+/* Default */
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  
 }
-header{
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    height: 15vh;
-    font-family: "Oswald";
+header {
+  height: 15vh; 
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  font-family: "Oswald", sans-serif;
 }
-header h2 {
-    font-weight: 700;
-    font-size: 2.5rem;
+header ul {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  list-style-type: none;
+  height: 15vh;
+  
 }
-
-  header nav {
+nav {
     width: 50%;
     height: 15vh;
 }
 
-header ul {
-    height: 15vh;
-    display: flex;
-    justify-content: space-evenly;
-    list-style: none;
-    align-items: center;
-  }
-  header li {
-    font-size: 1.25rem;
-    font-weight: 500;
-  }
-  header a {
-    text-decoration: none;
-    color: #5b5b5b;
-  }
+a {
+  text-decoration: none;
+  color: #5b5b5b;
+  font-size: 1.5rem;
+  /* font-weight: 500; */
+}
